--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,10 +13,12 @@
         android:layout_height="800dp"
         android:src="@drawable/ic_artboard_2"/>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/activity_home_cardView"
         app:cardElevation="0dp"
-        app:cardBackgroundColor="@color/rosa"
+        app:cardCornerRadius="0dp"
+        app:strokeWidth="2dp"
+        app:strokeColor="@color/rosa"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,36 +43,37 @@
                 app:layout_constraintBottom_toBottomOf="@id/activity_home_fab_perfil" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/activity_home_fab_perfil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/activity_home_fab_perfil"
-                android:layout_margin="16dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="8dp"
+                android:backgroundTint="@color/rosa_light"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
                 android:src="@drawable/ic_profile"
                 app:borderWidth="0dp"
-                android:backgroundTint="@color/rosa_light"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:scaleX="0.7"
-                android:scaleY="0.7"/>
-
-            <androidx.appcompat.widget.SearchView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/activity_home_search"
-                android:background="@drawable/text_background"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintTop_toBottomOf="@id/activity_home_fab_perfil"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
+
+<!--            <androidx.appcompat.widget.SearchView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/activity_home_search"-->
+<!--                android:background="@drawable/text_background"-->
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:layout_marginRight="16dp"-->
+<!--                android:layout_marginBottom="8dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/activity_home_fab_perfil"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"/>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 
 
@@ -90,10 +93,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:tabIconTint="@color/selected_tab_color"
-        app:tabBackground="@color/rosa_dark"
+        app:tabIconTint="@color/rosa_dark"
+        app:tabBackground="@color/rosa_light"
         app:tabSelectedTextColor="@color/selected_tab_color"
-        app:tabIndicatorColor="#00c3c3c3">
+        app:tabIndicatorColor="@color/roxo_dark"
+        app:tabIndicatorHeight="3dp"
+        app:tabIndicatorAnimationMode="elastic">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
