--- a/app/src/main/res/layout/recycler_clientes_item.xml
+++ b/app/src/main/res/layout/recycler_clientes_item.xml
@@ -6,16 +6,17 @@
     android:layout_height="wrap_content"
     tools:context=".home.cliente.adapter.ListaClientesAdapter">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        app:strokeWidth="2dp"
+        app:strokeColor="@color/roxo"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="@color/rosa_light"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="12dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,24 +26,51 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/clientes_item_image"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:maxWidth="75dp"
-                android:maxHeight="75dp"
-                android:layout_margin="16dp"
-                android:scaleType="fitXY"
-                android:background="@drawable/image_frame"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/recycler_clientes_item_cardView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:strokeWidth="4dp"
+                app:strokeColor="@color/rosa"
+                android:layout_marginBottom="8dp"
+                app:cardBackgroundColor="@color/rosa_light"
+                app:cardCornerRadius="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/clientes_item_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_clientes"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHeight_max="100dp"
+                        app:layout_constraintWidth_max="100dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/clientes_item_nome_cliente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:textColor="@color/rosa_dark"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/clientes_item_numero_celular"
                 app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
                 tools:text="Nome do Cliente" />
@@ -52,9 +80,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                app:layout_constraintBottom_toBottomOf="@id/clientes_item_image"
-                app:layout_constraintStart_toEndOf="@id/clientes_item_image"
-                app:layout_constraintTop_toTopOf="@id/clientes_item_image"
+                android:textColor="@color/rosa_dark"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@id/recycler_clientes_item_cardView"
+                app:layout_constraintStart_toEndOf="@id/recycler_clientes_item_cardView"
+                app:layout_constraintTop_toTopOf="@id/recycler_clientes_item_cardView"
                 tools:text="Número do Celular" />
 
             <TextView
@@ -62,12 +92,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:textColor="@color/rosa_dark"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/clientes_item_numero_celular"
                 app:layout_constraintTop_toBottomOf="@id/clientes_item_numero_celular"
                 tools:text="Pedidos realizados" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
