--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,15 +11,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="800dp"
         android:layout_height="800dp"
-        android:src="@drawable/ic_artboard_2"/>
+        android:src="@drawable/artwork_costura"/>
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/activity_home_cardView"
         app:cardElevation="0dp"
         app:cardCornerRadius="0dp"
         app:strokeWidth="2dp"
-        app:strokeColor="@color/rosa"
         android:layout_width="0dp"
+        app:cardBackgroundColor="@color/rosa"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,17 +30,35 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/activity_home_fab_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
-                tools:text="Nome Costureira"
-                android:id="@+id/activity_home_nome_costureira"
-                android:textSize="16sp"
-                android:textColor="@color/black"
+                android:layout_margin="4dp"
+                android:backgroundTint="@color/white"
+                android:outlineAmbientShadowColor="@color/rosa"
+                android:outlineSpotShadowColor="@color/rosa"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
+                android:src="@drawable/ic_back"
+                app:borderWidth="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/activity_home_fab_perfil"
-                app:layout_constraintBottom_toBottomOf="@id/activity_home_fab_perfil" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/activity_home_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Clientes"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/activity_home_fab_perfil"
@@ -73,7 +91,7 @@
 
 
 
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
 
 
@@ -94,16 +112,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:tabIconTint="@color/rosa_dark"
-        app:tabBackground="@color/rosa_light"
-        app:tabSelectedTextColor="@color/selected_tab_color"
-        app:tabIndicatorColor="@color/roxo_dark"
-        app:tabIndicatorHeight="3dp"
+        app:tabIndicatorColor="@color/rosa"
+        app:tabIndicatorGravity="stretch"
         app:tabIndicatorAnimationMode="elastic">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/ic_clientes" />
+            android:icon="@drawable/ic_clientes"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
